[package]
name = "range_checker"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
keywords = ["check", "range", "filter"]
description = "derive-macro crate aimed to provide declarative bounds checking and filtering for structure."
repository = "https://github.com/TYPEmber/range_checker.git"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
range_checker_macro = {path = "./range_checker_macro", version = "0"}
range_checker_basic = {path = "./range_checker_basic", version = "0"}