[package]
name = "range_checker_macro"
version = "0.2.2"
edition = "2021"
license = "MIT OR Apache-2.0"
keywords = ["check", "range", "filter"]
description = "derive-macro crate aimed to provide declarative bounds checking and filtering for structure."
repository = "https://github.com/TYPEmber/range_checker.git"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
quote = "1"
syn = { version = "1", features = ["full"] }
proc-macro2 = "1"